@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.50 2005/01/22 08:28:46 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.51 2005/01/22 08:58:05 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   22 Jan 2005; Preston Cody <codeman@gentoo.org>
   changed default value of CC._enable_ssh to True because this is smart.
+  added code to allow custom kernel .config. may be unstable and break. sorry.
 
   21 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   partition() now waits until after it checks for partition flags before delete
